site: final fixes, onboarding guides simplification, sitemap update

--- a/scalus-site/content/index.mdx
+++ b/scalus-site/content/index.mdx
@@ -10,9 +10,9 @@ import Image from 'next/image'
 ## Quick Start
 
 <Cards>
-  <Cards.Card title="Installation Guide" href="/docs/getting-started" />
+  <Cards.Card title="Installation Guide" href="/docs/get-started" />
   <Cards.Card title="First Smart Contract" href="/docs/smart-contract/developing-smart-contracts" />
-  <Cards.Card title="Examples Repository" href="https://github.com/nau/scalus/tree/master/scalus-examples" />
+  <Cards.Card title="Examples Repository" href="https://github.com/nau/scalus/tree/master/scalus-examples" target="_blank" />
 </Cards>
 
 ## Why Scalus?
