docs: update index.mdx to clarify technology stack and optimize wording

--- a/scalus-site/content/index.mdx
+++ b/scalus-site/content/index.mdx
@@ -17,7 +17,8 @@ import Image from 'next/image'
 
 ## Why Scalus?
 
-**One Language, Full Stack** - Write smart contracts and application logic in Scala 3. No context switching between Plutus/Haskell for contracts and JavaScript/Python for frontends.
+**One Language, Full Stack** - Write smart contracts and application logic in Scala 3.
+No context switching between Plinth/Aiken for contracts and JavaScript/Python for frontends and backends.
 
 **Type-Safe by Design** - Catch errors at compile time, not on-chain. Leverage Scala's powerful type system to prevent entire classes of bugs before deployment.
 
@@ -30,11 +31,11 @@ import Image from 'next/image'
 ## Complete Development Lifecycle
 
 - [Write Cardano smart contracts](/docs/smart-contract/developing-smart-contracts) in Scala 3 that compile to UPLC
-- Optimize on-chain code with [advanced optimisation techniques](/docs/smart-contract/optimisations)
-- [Debug Smart contracts](docs/smart-contract/debugging) as regular Scala code with your IDE's debugger
+- Optimize on-chain code with [advanced optimization techniques](/docs/smart-contract/optimisations)
+- [Debug smart contracts](/docs/smart-contract/debugging) as regular Scala code with your IDE's debugger
 - Build and evaluate transactions off-chain with the transaction builder
 - Integrate on-chain and off-chain components in your full-stack application
-- [Test your entire application](docs/smart-contract/testing) with unit, integration, and property-based tests
+- [Test your entire application](/docs/smart-contract/testing) with unit, integration, and property-based tests
 - Verify your solution on a testnet with the familiar tools
 - Deploy production-ready applications to mainnet with confidence
 
