site: txbuilder - SEO optimisations, hidding 2 pages

--- a/scalus-site/content/transaction-builder/index.mdx
+++ b/scalus-site/content/transaction-builder/index.mdx
@@ -1,6 +1,7 @@
 ---
 asIndexPage: true
-title: Transaction Builder
+title: Cardano Transaction Builder
+description: Build valid Cardano transactions with Scalus TxBuilder. Fluent API for constructing transactions with automatic script evaluation, fee calculation, and UTxO management.
 sidebarTitle: Transaction Builder
 ---
 
@@ -76,9 +77,12 @@ TxBuilder.withCustomEvaluator(env, evaluator)
 
 ## Next Steps
 
-- **[First Transaction](/docs/transaction-builder/first-transaction)** - Build your first transaction step by step
-- **[Payment Methods](/docs/transaction-builder/pay-methods)** - Learn different ways to send ADA and tokens
+- **[First Transaction](/docs/transaction-builder/building-first-transaction)** - Build your first transaction step by step
+- **[Payment Methods](/docs/transaction-builder/payment-methods)** - Learn different ways to send ADA and tokens
 - **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Understand input selection and spending script UTxOs
-- **[Minting & Burning](/docs/transaction-builder/mint-burn-assets)** - Create and destroy native tokens
+- **[Minting & Burning](/docs/transaction-builder/minting-burning-assets)** - Create and destroy native tokens
+
+{/*
 - **[Validator Interactions](/docs/transaction-builder/validator-interactions)** - Work with Plutus validators
 - **[Advanced Features](/docs/transaction-builder/advanced-features)** - Deep dive into advanced capabilities
+*/}
