--- a/scalus-site/content/transaction-builder/validator-interactions.mdx
+++ b/scalus-site/content/transaction-builder/validator-interactions.mdx
@@ -1,6 +1,8 @@
 ---
-title: Validator Interactions
+title: Working with Plutus Validators
+description: Build transactions that interact with Plutus validators using a Hash Time Locked Contract (HTLC) example. Share code between validators and transaction builders in Scala.
 sidebarTitle: Validator Interactions
+display: hidden
 ---
 
 import { Callout } from 'nextra/components'
