--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -1,11 +1,12 @@
 ---
-title: First Transaction
+title: How to Build Your First Cardano Transaction with Scalus
+description: Step-by-step tutorial for building, signing, and submitting your first Cardano transaction using Scalus TxBuilder. Learn the fundamentals of Cardano transaction building with Scalus.
 sidebarTitle: First Transaction
 ---
 
 import { Steps, Callout } from 'nextra/components'
 
-# Building Your First Transaction
+# How to Build Your First Cardano Transaction
 
 This guide walks you through building a simple Cardano transaction using Scalus TxBuilder. You'll learn the fundamental workflow: setting up the environment, building, and signing a transaction.
 
@@ -159,6 +160,6 @@ The `complete()` method queries the provider for UTxOs at your address and selec
 
 ## Next Steps
 
-- **[Payment Methods](/docs/transaction-builder/pay-methods)** - Different ways to send ADA and tokens
+- **[Payment Methods](/docs/transaction-builder/payment-methods)** - Different ways to send ADA and tokens
 - **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Manual input selection and spending from scripts
-- **[Minting & Burning](/docs/transaction-builder/mint-burn-assets)** - Create and destroy native tokens
+- **[Minting & Burning](/docs/transaction-builder/minting-burning-assets)** - Create and destroy native tokens
